--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,7 +4,7 @@
     <nav>
       <ul>
         <li>
-          <a href="#">
+          <a href="http://www.tekmeda.com">
             Tekmeda
           </a>
         </li>
@@ -24,7 +24,7 @@
       &copy;
       {{test | date: 'yyyy'}}, Designed by
       <a href="#" target="_blank">Tekmeda</a>. Coded by
-      <a href="#" target="_blank">Dubster</a>.
+      <a href="https://www.linkedin.com/in/saswata-bhattacharya-525948115" target="_blank">Dubster</a>.
     </div>
   </div>
 </footer>
